# SimplePasswordManager

./: AuthorizationScreen.qml  CMakeLists.txt  CloseAppScreen.qml  CloseCurrentDocumentScreen.qml  ErrorScreen.qml  ExtraButtonsMenu.qml  Main.qml  MainMenuScreen.qml  README.md  RecordsContextMenu.qml  RemoveSelectedRecordScreen.qml  SettingsScreen.qml  alphanumcomparer.cpp  alphanumcomparer.h  columnssorter.cpp  columnssorter.h  localmodelloader.cpp  localmodelloader.h  main.cpp  qclipboardqtquickwrapper.h  qml.qrc  sessionmanager.cpp  sessionmanager.h  settingsmanager.h  spmmodel.cpp  spmmodel.h  spmsortfilterproxymodel.cpp  spmsortfilterproxymodel.h
